@@ -13,6 +13,23 @@
 
   <dependencies>
     <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13.2</version>
+    </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-inline</artifactId>
+        <version>5.2.0</version>
+        <scope>compile</scope>      
+    </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-junit-jupiter</artifactId>
+        <version>5.12.0</version>
+        <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.11.0</version>
@@ -51,7 +68,15 @@
                     </goals>
                 </execution>
             </executions>
-        </plugin>        
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M9</version> <!-- Use the latest version -->
+            <configuration>
+                <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+            </configuration>
+        </plugin>                
     </plugins>
 </build>
 
